@@ -31,7 +31,7 @@ EXAMPLE1
      print "Count of Czech CPAN authors: $count\n";
 
      # Output:
-     # Count of Czech CPAN authors: 37
+     # Count of Czech CPAN authors: 38
 
 EXAMPLE2
      use strict;
@@ -83,11 +83,12 @@ EXAMPLE2
      #     [29] "TKR",
      #     [30] "TRIPIE",
      #     [31] "TYNOVSKY",
-     #     [32] "VASEKD",
-     #     [33] "YENYA",
-     #     [34] "ZABA",
-     #     [35] "ZEMAN",
-     #     [36] "ZOUL"
+     #     [32] "VARISD",
+     #     [33] "VASEKD",
+     #     [34] "YENYA",
+     #     [35] "ZABA",
+     #     [36] "ZEMAN",
+     #     [37] "ZOUL"
      # ]
 
 DEPENDENCIES
