@@ -1,4 +1,5 @@
 0.25
+ - Update README.
 
 0.24 2020-02-28T20:40:33+01:00
  - Add VARISD CPAN account.
